Updated html readme

--- a/README.html
+++ b/README.html
@@ -58,6 +58,8 @@ It departs from sound and takes human perception as the basis for musical featur
 <ul>
   <li><a href="http://www.jstor.org/stable/40285830">An Auditory Model of the Role of Short-Term Memory in Probe-Tone Ratings</a>, Marc Leman, <i>Music Perception: An Interdisciplinary Journal</i> , Vol. 17, No. 4, Tonality Induction (Summer, 2000), p. 481-509</li>
   <li><a href="http://www.sciencemag.org/content/298/5601/2167.short">The Cortical Topography of Tonal Structures Underlying Western Music</a> Petr Janata, Jeffrey L. Birk, John D. Van Horn, Marc Leman, Barbara Tillmann, and Jamshed J. Bharucha. <i>Science</i> 298 (5601):2167-2170 (2002)</li>
+    <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4047967/">Empirical evidence for musical syntax processing? computer simulations reveal the contribution of auditory short-term memory</a> Bigand, E., Delbé, C., Poulin-Charronnat, B., Leman, M., and Tillmann, B. (2014). <i>Frontiers in Systems Neuroscience</i>, 8(94):1–27.</li>
+  <li><a href="https://www.ncbi.nlm.nih.gov/pubmed/24490788"> A combined model of sensory and cognitive representations underlying tonal expectations in music: From audio signals to behavior.</a>  Collins, T., Tillmann, B., Barrett, F. S., Delbé, C., and Janata, P. (2014). <i>Psychological review</i>, 121(1):33.</li>
 </ul>
 
 
